--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -3,33 +3,11 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="URL-GO">
-  <main>
-    <h1>Welcome to <span class="text-gradient">URL-GO</span></h1>
+  <main class="flex justify-center items-center">
+    <h1 class="text-7xl text-white/80 text-center font-bold pt-8">
+      Welcome to <span class="text-indigo-400">URL-GO</span>
+    </h1>
   </main>
 </Layout>
 
-<style>
-  main {
-    margin: auto;
-    padding: 1rem;
-    width: 800px;
-    max-width: calc(100% - 2rem);
-    color: white;
-    font-size: 20px;
-    line-height: 1.6;
-  }
-  h1 {
-    font-size: 4rem;
-    font-weight: 700;
-    line-height: 1;
-    text-align: center;
-    margin-bottom: 1em;
-  }
-  .text-gradient {
-    background-image: var(--accent-gradient);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 400%;
-    background-position: 0%;
-  }
-</style>
+<style></style>
