--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -7,10 +7,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html
-  lang="en"
-  class="min-h-screen bg-gradient-to-b from-black via-black to-indigo-800"
->
+<html lang="en" class="min-h-screen bg-black">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
