--- a/frontend/src/pages/app.astro
+++ b/frontend/src/pages/app.astro
@@ -6,10 +6,11 @@ import URLForm from "../components/URLForm";
 <Layout title="URL-GO">
   <main class="flex flex-wrap justify-center relative bg-black dark">
     <div class="z-10 flex flex-wrap justify-center">
-      <h1 class="basis-full text-5xl text-white text-center font-bold mt-32">
-        Welcome to <span class="text-indigo-400">URL-GO</span>
+      <h1 class="basis-full text-5xl text-center font-bold font-mono mt-32">
+        <span class="text-white/70"> Welcome to</span>
+        <span class="text-blue-500">URL-GO</span>
       </h1>
-      <div class="card my-40 p-24">
+      <div class="card my-40 p-10">
         <div class="card-border">
           <div class="gradient"></div>
         </div>
