--- a/frontend/src/pages/app.astro
+++ b/frontend/src/pages/app.astro
@@ -10,7 +10,7 @@ import URLForm from "../components/URLForm";
         <span class="text-white/80"> Welcome to</span>
         <span class="text-blue-500">URL-GO</span>
       </h1>
-      <div class="card my-40 p-10">
+      <div class="card my-40 p-5 sm:my-50 sm:p-20">
         <div class="card-border">
           <div class="gradient"></div>
         </div>
