stylize input field

--- a/frontend/src/pages/app.astro
+++ b/frontend/src/pages/app.astro
@@ -5,7 +5,7 @@ import Card from "../components/Card.astro";
 ---
 
 <Layout title="URL-GO">
-  <main class="flex flex-wrap justify-center relative bg-black dark">
+  <main class="flex flex-wrap justify-center relative dark">
     <Card>
       <URLForm client:load />
     </Card>
