--- a/frontend/src/pages/app.astro
+++ b/frontend/src/pages/app.astro
@@ -4,6 +4,7 @@ import URLForm from "../components/URLForm";
 import Card from "../components/Card.astro";
 ---
 
+<!-- TODO: Make UI more responsive  -->
 <Layout title="URL-GO">
   <main class="flex flex-wrap justify-center relative dark">
     <Card>
