initial attempt at better mobile design

--- a/frontend/src/components/Card.astro
+++ b/frontend/src/components/Card.astro
@@ -3,7 +3,7 @@
     <span class="text-white/80"> Welcome to</span>
     <span class="text-blue-500">URL-GO</span>
   </h1>
-  <div class="card my-40 p-5 sm:my-50 sm:p-20">
+  <div class="card my-40 py-5 sm:my-50 sm:p-20">
     <div class="card-border">
       <div class="gradient"></div>
     </div>
