--- a/frontend/src/components/Card.astro
+++ b/frontend/src/components/Card.astro
@@ -1,11 +1,13 @@
-<div class="z-10 flex flex-wrap justify-center">
-  <h1 class="basis-full text-5xl text-center font-bold font-mono mt-32">
-    <span class="text-white/80"> Welcome to</span>
+<div
+  class="z-10 flex flex-col h-dvh justify-start items-center w-4/5 sm:w-3/5 md:w-1/2 xl:w-1/3 gap-y-48"
+>
+  <h1 class="text-5xl text-center font-bold font-mono mt-20">
+    <span class="text-white/80">Welcome to</span>
     <span class="text-blue-500">URL-GO</span>
   </h1>
-  <div class="card my-40 py-5 sm:my-50 sm:p-20">
+  <div class="card h-1/3 w-full">
     <div class="card-border">
-      <div class="gradient"></div>
+      <div class="gradient"></div>z
     </div>
     <div class="card-shadow">
       <div class="gradient"></div>
